# be-task-ca

./: README.md  docker-compose.yml  pyproject.toml  scripts.py  test.db
app/: __init__.py  main.py
be_task_ca/: database.py
domain/entities/: cart.py  customer.py  item.py
domain/repositories/: cart_repository.py  customer_repository.py  item_repository.py
infrastructure/inmemory/: cart_repository.py  customer_repository.py  item_repository.py
infrastructure/sqlalchemy/: cart_repository.py  customer_repository.py  db.py  item_repository.py  models.py
interfaces/fastapi/routes/: cart_routes.py  customer_routes.py  item_routes.py
tests/use_cases/: test_add_to_cart.py  test_create_customer.py  test_create_item.py  test_endpoints.py
use_cases/cart/: add_to_cart.py
use_cases/customer/: create_customer.py
use_cases/item/: create_item.py  get_all_items.py
