[tool.poetry]
name = "shop-clean-arch"
version = "0.1.0"
description = "Shop backend following Clean Architecture"
authors = ["César Acevedo <cesar@example.com>"]
readme = "README.md"
packages = [
  { include = "app" },
  { include = "domain" },
  { include = "use_cases" },
  { include = "infrastructure" },
  { include = "interfaces" }
  
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.11"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.7"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[tool.poetry.scripts]
start = "scripts:start"
test = "scripts:run_tests"
lint = "scripts:run_linter"
format = "scripts:auto_format"
types = "scripts:check_types"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"